--- a/index.html
+++ b/index.html
@@ -2,3 +2,13 @@
 layout: home
 # Index page
 ---
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8JEE6M4FRD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8JEE6M4FRD');
+</script>
